simply the self registration process into 3 steps